--- a/diseño.html
+++ b/diseño.html
@@ -76,34 +76,34 @@
             <img src="/assets/images/bento/bento1.jpg" alt="Imagen de inspiración 1">
         </div>
         <div class="bento-item tall">
-            <img src="/assets/images/bento/bento2.png" alt="Imagen de inspiración 2">
+            <img src="/assets/images/bento/bento2.PNG" alt="Imagen de inspiración 2">
         </div>
         <div class="bento-item">
             <img src="/assets/images/bento/bento3.jpg" alt="Imagen de inspiración 3">
         </div>
         <div class="bento-item">
-            <img src="/assets/images/bento/bento4.png" alt="Imagen de inspiración 4">
+            <img src="/assets/images/bento/bento4.PNG" alt="Imagen de inspiración 4">
         </div>
         <div class="bento-item wide">
             <img src="/assets/images/bento/bento5.jpg" alt="Imagen de inspiración 5">
         </div>
         <div class="bento-item">
-            <img src="/assets/images/bento/bento6.jpg" alt="Imagen de inspiración 6">
+            <img src="/assets/images/bento/bento6.JPG" alt="Imagen de inspiración 6">
         </div>
         <div class="bento-item">
             <img src="/assets/images/bento/bento7.jpg" alt="Imagen de inspiración 7">
         </div>
         <div class="bento-item">
-            <img src="/assets/images/bento/bento8.jpg" alt="Imagen de inspiración 8">
+            <img src="/assets/images/bento/bento8.JPG" alt="Imagen de inspiración 8">
         </div>
         <div class="bento-item">
             <img src="/assets/images/bento/bento9.jpg" alt="Imagen de inspiración 9">
         </div>
         <div class="bento-item">
-            <img src="/assets/images/bento/bento10.png" alt="Imagen de inspiración 10">
+            <img src="/assets/images/bento/bento10.PNG" alt="Imagen de inspiración 10">
         </div>
         <div class="bento-item">
-            <img src="/assets/images/bento/bento11.jpg" alt="Imagen de inspiración 11">
+            <img src="/assets/images/bento/bento11.JPG" alt="Imagen de inspiración 11">
         </div>
         <div class="bento-item">
             <img src="/assets/images/bento/bento12.jpg" alt="Imagen de inspiración 12">
