--- a/projects.html
+++ b/projects.html
@@ -43,13 +43,13 @@
                 <div class="articles">
 
                     <article>
-                        <a href="https://wlf04.github.io/Photographer-Portafolio-/">
+                        <a href="https://employee-manager-demo.vercel.app/">
                             <figure>
-                                <img src="assets/images/projects/portafolio.png" alt="Photographer Portafolio Preview">
+                                <img src="preview/1" alt="Metric Preview">
                             </figure>
                             <div class="article-preview">
-                                <h2>Photographer Portafolio</h2>
-                                <p>A portafolio for photographers and creatives.</p>
+                                <h2>Metric</h2>
+                                <p>A employee manager</p>
                                 <div class="techno">
                                     <i class="fa-brands fa-css3-alt"></i>
                                     <i class="fa-brands fa-html5"></i>
@@ -162,13 +162,17 @@
                     </article>
                     
                     <article>
-                        <a href="#"> <figure>
-                                <img src="assets/images/projects/in-progress.jpg" alt="Brand Website Preview">
+                        <a href="https://wlf04.github.io/Photographer-Portafolio-/"> <figure>
+                                <img src="assets/images/projects/portafolio.png" alt="Photographer Preview">
                             </figure>
                             <div class="article-preview">
-                                <h2>Brand Website</h2>
-                                <p>Work in progress.</p>
+                                <h2>Photographer Portafolio</h2>
+                                <p>The name say all</p>
                                 <div class="techno">
+                                    <i class="fa-brands fa-css3-alt"></i>
+                                    <i class="fa-brands fa-html5"></i>
+                                    <i class="fa-brands fa-js"></i>
+                                    <i class="fa-brands fa-react"></i>
                                 </div>
                             </div>
                         </a>
