--- a/projects.html
+++ b/projects.html
@@ -45,7 +45,7 @@
                     <article>
                         <a href="https://employee-manager-demo.vercel.app/">
                             <figure>
-                                <img src="assets/image/projects/4" alt="Metric Preview">
+                                <img src="assets/images/projects/4" alt="Metric Preview">
                             </figure>
                             <div class="article-preview">
                                 <h2>Metric</h2>
