--- a/projects.html
+++ b/projects.html
@@ -48,7 +48,7 @@
                                 <img src="assets/images/projects/4.png" alt="Metric Preview">
                             </figure>
                             <div class="article-preview">
-                                <h2>Metric</h2>
+                                <h2>Metric(Demo)</h2>
                                 <p>A employee manager</p>
                                 <div class="techno">
                                     <i class="fa-brands fa-css3-alt"></i>
