--- a/Cybersecurity.html
+++ b/Cybersecurity.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="icon.svg">
     <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.1.1/model-viewer.min.js"></script>
+    <script defer src="/_vercel/insights/script.js"></script>
   
    
 </head>
