--- a/certificaciones.html
+++ b/certificaciones.html
@@ -13,6 +13,7 @@
     <link rel="icon" href="assets/images/icon.svg">
     
     <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.1.1/model-viewer.min.js"></script>
+    <script defer src="/_vercel/insights/script.js"></script>
 </head>
 <body>
 
