--- a/diseño.html
+++ b/diseño.html
@@ -12,6 +12,7 @@
 
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="icon" href="assets/images/icon.svg">
+    <script defer src="/_vercel/insights/script.js"></script>
 </head>
 <body>
 
