--- a/projects.html
+++ b/projects.html
@@ -6,6 +6,7 @@
     <title>Projects</title>
     <link rel="stylesheet" href="/style2.css">
     <link rel="icon" href="assets/images/icon.svg">
+    <script defer src="/_vercel/insights/script.js"></script>
 </head>
 <body>
 
