--- a/servicios.html
+++ b/servicios.html
@@ -6,6 +6,7 @@
     <title>Servicios - Portafolio</title>
     <link rel="stylesheet" href="/style2.css">
     <script src="https://kit.fontawesome.com/db173a3adc.js" crossorigin="anonymous"></script>
+    <script defer src="/_vercel/insights/script.js"></script>
 </head>
 <body>
 
