--- a/certificaciones.html
+++ b/certificaciones.html
@@ -13,7 +13,9 @@
     <link rel="icon" href="assets/images/icon.svg">
     
     <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.1.1/model-viewer.min.js"></script>
-    <script defer src="/_vercel/insights/script.js"></script>
+    <script>
+    window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+   </script>
 </head>
 <body>
 
