--- a/coming.html
+++ b/coming.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Acceso Restringido</title>
     <link rel="stylesheet" href="/style2.css">
-    <script defer src="/_vercel/insights/script.js"></script>
+   <script>
+    window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+   </script>
 </head>
 <body>
     <div class="hacker-terminal">
