--- a/diseño.html
+++ b/diseño.html
@@ -12,7 +12,9 @@
 
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="icon" href="assets/images/icon.svg">
-    <script defer src="/_vercel/insights/script.js"></script>
+    <script>
+     window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+    </script>
 </head>
 <body>
 
