--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,9 @@
     <title>Projects</title>
     <link rel="stylesheet" href="/style2.css">
     <link rel="icon" href="assets/images/icon.svg">
-    <script defer src="/_vercel/insights/script.js"></script>
+    <script>
+    window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+    </script>
 </head>
 <body>
 
