--- a/servicios.html
+++ b/servicios.html
@@ -6,7 +6,9 @@
     <title>Servicios - Portafolio</title>
     <link rel="stylesheet" href="/style2.css">
     <script src="https://kit.fontawesome.com/db173a3adc.js" crossorigin="anonymous"></script>
-    <script defer src="/_vercel/insights/script.js"></script>
+    <script>
+     window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+    </script>
 </head>
 <body>
 
