--- a/servicios.html
+++ b/servicios.html
@@ -21,7 +21,7 @@
     </header>
 
     <div class="services-container">
-        <h1>Nuestros Servicios</h1>
+        <h1>Servicios</h1>
 
         <section class="service-cards">
             <article class="service-card">
