--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <img src="assets/modelo.webp" alt="Oscar Boza Martinez profile picture">
             </div>
             <div class="intro-text">
-                <h1>Oscar Boza Martinez</h1>
+                <h1>Que bola</h1>
                 <p>In Tech we Trust</p>
                 <div class="action-buttons">
                     <button class="descargar" onclick="location.href='#'">Download CV <i class="fa-solid fa-file-arrow-down"></i></button>
