--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <h2>PROJECTS</h2>
     <div class="project-categories">
          <a href="coming.html">Cyber Security</a>
-         <a href="projects.html">Web Developer</a>
+         <a href="projects.html">Web</a>
          <a href="diseño.html">Design</a>
          <a href="coming.html">Blogs</a>
     </div>
@@ -136,4 +136,5 @@
      
     <script src="/assets/js/matrix.js"></script>
 </body>
+
 </html>
