--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <h1>Oscar Boza Martinez</h1>
                 <p>#######</p>
                 <div class="action-buttons">
-                    <button class="descargar" onclick="location.href='#'">Download CV <i class="fa-solid fa-file-arrow-down"></i></button>
+                    <button class="descargar" onclick="location.href='#'"><i class="fa-solid fa-file-arrow-down"></i></button>
                     <a href="#contact" class="contact-button">Contact Me</a>
                 </div>
             </div>
@@ -138,4 +138,5 @@
 </body>
 
 </html>
+
 
